// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given mode: "development", env: "undefined", argv: "{}" given NoResolvePlugins should match snapshot 1`] = `
Object {
  "mode": "development",
  "resolve": Object {},
}
`;

exports[`given mode: "development", env: "undefined", argv: "{}" given ResolvePlugins should match snapshot 1`] = `
Object {
  "mode": "development",
  "resolve": Object {
    "plugins": Array [],
  },
}
`;

exports[`given mode: "development", env: "undefined", argv: "{}" given ResolvePlugins should match snapshot 2`] = `
Object {
  "mode": "development",
  "resolve": Object {
    "plugins": Array [
      [Function],
    ],
  },
}
`;
